[tool.scikit-build]
cmake.minimum-version = "3.26.4"
cmake.verbose = true
ninja.make-fallback = true
build-dir = "build/{wheel_tag}"
wheel.packages = ["pynvjitlink"]

[build-system]
requires = ["scikit-build-core"]
build-backend = "scikit_build_core.build"

[project]
name = "pynvjitlink"
dynamic = ["version"]
description = "nvJitLink Python binding"
readme = { file = "README.md", content-type = "text/markdown" }
authors = [
    { name = "NVIDIA Corporation" },
]
license = { text = "Apache 2.0" }
requires-python = ">=3.9"

[project.urls]
Homepage = "https://rapids.ai/"
Documentation = "https://github.com/rapidsai/pynvjitlink/blob/main/README.md"
Repository = "https://github.com/rapidsai/pynvjitlink"
License = "https://github.com/rapidsai/pynvjitlink/blob/main/LICENSE"

[tool.setuptools]
license-files = ["LICENSE"]

[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.regex"
input = "pynvjitlink/VERSION"
regex = "(?P<value>.*)"

[tool.pytest.ini_options]
xfail_strict = true
